--- a/dictionary2/src/main/resources/application.properties
+++ b/dictionary2/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=5555
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+mongodb.data.mongodb.database=dictionary2
 
+spring.main.allow-circular-references=true
